--- a/app/src/main/res/layout/recyclerview_home.xml
+++ b/app/src/main/res/layout/recyclerview_home.xml
@@ -5,10 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:elevation="5dp"
+        android:text="@string/recyclerView_dateTitle"
+        android:textAlignment="textEnd"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
+        app:layout_constraintEnd_toStartOf="@+id/textView_recyclerViewHome_Date"
+        app:layout_constraintStart_toEndOf="@+id/textView_recyclerViewHome_Time"
+        app:layout_constraintTop_toBottomOf="@+id/textView_recyclerViewHome_Name" />
+
     <ImageView
         android:id="@+id/imageView_recyclerViewHome_firstLatter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="5dp"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
@@ -37,21 +53,19 @@
 
     <ImageView
         android:id="@+id/imageView_recyclerViewHome_notificationIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="5dp"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
         app:layout_constraintEnd_toEndOf="@+id/materialCardView"
-        app:layout_constraintTop_toTopOf="@+id/materialCardView"
-        app:srcCompat="@drawable/ic_notifications_black_24dp" />
+        app:layout_constraintTop_toTopOf="@+id/materialCardView" />
 
     <TextView
         android:id="@+id/textView_recyclerViewHome_Time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="10dp"
         android:elevation="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -59,7 +73,6 @@
         android:textColor="#E8000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-        app:layout_constraintEnd_toStartOf="@+id/textView_recyclerViewHome_Date"
         app:layout_constraintStart_toEndOf="@+id/imageView_recyclerViewHome_firstLatter"
         app:layout_constraintTop_toBottomOf="@+id/textView_recyclerViewHome_Name" />
 
@@ -67,7 +80,7 @@
         android:id="@+id/textView_recyclerViewHome_Date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
         android:elevation="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -81,7 +94,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
