--- a/app/src/main/res/layout/recyclerview_home.xml
+++ b/app/src/main/res/layout/recyclerview_home.xml
@@ -95,10 +95,11 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
+        android:elevation="4dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="3dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
