--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,11 +47,12 @@
         android:id="@+id/spinner_mainHome_sortList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
+        android:background="#F1FFFF"
         android:elevation="6dp"
         android:padding="5dp"
-        android:textAlignment="center"
+        android:spinnerMode="dropdown"
+        android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toStartOf="@+id/imageView_mainHome_search"
         app:layout_constraintStart_toEndOf="@+id/textView"
